--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-https://github.com/subinps/pyrogram/tree/session
+git+https://github.com/subinps/pyrogram@session
 TgCrypto
 py-tgcalls==0.5.2
 python-dotenv
